# api-backend

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs
.github/: deployment.yaml
.github/workflows/: deploy.yml
docs/: README.md  api-reference.md  architecture.md  configuration.md  deployment.md  development.md  development_rust.md  integration.md  system-architecture.md  troubleshooting.md
k8s/: deployment.yaml
src/: config.rs  error.rs  health.rs  kafka.rs  lib.rs  main.rs
src/clients/: auth_client.rs  base.rs  data_connector_client.rs  grpc.rs  mcp_client.rs  mod.rs  relation_graph_client.rs  unified_processor_client.rs
src/infra/grpc/: clients.ts
src/kafka/: events.rs  mod.rs  producer.rs
src/middleware/: auth.rs  cache.rs  circuit_breaker.rs  mod.rs  rate_limit.rs  security_headers.rs  zero_trust.rs
src/models/: mod.rs  responses.rs  search.rs  source.rs  user.rs
src/routes/: mod.rs  webhooks.rs
src/routes/v1/: agents.rs  compliance.rs  dashboard.rs  documents.rs  entities.rs  health.rs  mcp.rs  mod.rs  processing.rs  repositories.rs  search.rs  sources.rs  sync.rs  urls.rs
