[package]
name = "api-backend"
version = "0.1.0"
edition = "2021"
authors = ["ConFuse Team"]
description = "Central API Gateway for the ConFuse Knowledge Intelligence Platform"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["timeout", "limit"] }
tower-http = { version = "0.5", features = ["cors", "trace", "request-id"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database & caching
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }
redis = { version = "0.24", features = ["tokio-comp"] }

# HTTP client for service calls
reqwest = { version = "0.11", features = ["json"] }

# Authentication
jsonwebtoken = "9"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Config
dotenvy = "0.15"

[dev-dependencies]
tokio-test = "0.4"
