[package]
name = "api-backend"
version = "0.1.0"
edition = "2021"
authors = ["ConFuse Team"]
description = "Central API Gateway for the ConFuse Knowledge Intelligence Platform"

[dependencies]
# Unified shared library
confuse-common = { path = "../shared-middleware/rust/confuse-common", features = ["axum-support"] }

# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["timeout", "limit"] }
tower-http = { version = "0.5", features = ["cors", "trace", "request-id"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }
dashmap = "5.5"

# HTTP client for service calls (maintained for webhooks & health checks)
reqwest = { version = "0.11", features = ["json"] }

# Authentication
jsonwebtoken = "9"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
once_cell = "1"

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Config
dotenvy = "0.15"

# =============================================================================
# Observability (OpenTelemetry)
# =============================================================================
opentelemetry = "0.22"
opentelemetry_sdk = { version = "0.22", features = ["rt-tokio"] }
opentelemetry-otlp = "0.15"
tracing-opentelemetry = "0.23"

# Async utilities
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"
